<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BottomSheetTargetWeight">

    <TextView
        android:id="@+id/add_weight_record_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_your_target_weight"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/enter_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_weight"
        android:textColorHint="@color/black"
        android:padding="15dp"
        android:clickable="true"
        android:background="@drawable/button_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="?android:attr/buttonBarStyle"
        >
        <Button
            android:id="@+id/target_weight_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/cancel"
            android:layout_margin="20dp"

            />
        <Button
            android:id="@+id/submit_target_weight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/submit"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>