<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
    <TextView
        android:id="@+id/edit_weight_record_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/edit_weight_record_title"
        android:textSize="20sp"
        android:textStyle="bold"
        />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/delete_icon"
            android:layout_marginStart="200dp"/>

    </LinearLayout>
        <EditText
            android:id="@+id/enter_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:inputType="numberDecimal"
            android:hint="@string/enter_weight"
            android:clickable="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/button_background"

            />

        <EditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:hint="@string/enter_date_prompt"
            android:textColorHint="@color/black"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@drawable/button_background"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/add_record_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="20dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

            <Button
                android:id="@+id/submit_record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/purple"
                android:textColor="@color/white"
                android:text="@string/save"
                />
        </LinearLayout>
</LinearLayout>

